# lab5

./: .nojekyll  03_model_db.html  03_model_db.qmd  _quarto.yml  index.html  my-db.duckdb  pyproject.toml  robots.txt  search.json  sitemap.xml
.github/workflows/: publish-py.yml
_freeze/03_model_db/execute-results/: html.json
site_libs/bootstrap/: bootstrap-d46c77e53d8120e2fd9ce5d93508efd1.min.css
