[project]
name = "lab4"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.3.2",
    "jupyter>=1.1.1",
    "logging>=0.4.9.6",
    "numpy>=2.3.2",
    "palmerpenguins>=0.1.4",
    "pandas>=2.3.2",
    "pins>=0.9.0",
    "requests>=2.32.5",
    "scikit-learn>=1.7.1",
    "sentry-sdk>=2.37.0",
    "shiny>=1.4.0",
    "vetiver>=0.2.6",
]
